--- a/PatientRecordsModule/Views/Analyses/AnalyseCreateView.xaml
+++ b/PatientRecordsModule/Views/Analyses/AnalyseCreateView.xaml
@@ -8,6 +8,13 @@
              xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     
     <DataTemplate DataType="{x:Type viewModels:AnalyseCreateViewModel}">
+        <DataTemplate.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </DataTemplate.Resources>
         <Grid MinHeight="550" MinWidth="450" MaxHeight="550" MaxWidth="450" 
               ScrollViewer.VerticalScrollBarVisibility="Auto">
             <Grid.RowDefinitions>
@@ -31,47 +38,53 @@
             <ComboBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,2" 
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
-                      SelectedValue="{Binding SelectedVisitId}"
+                      SelectedValue="{Binding SelectedVisitId, Mode=TwoWay}"
                       ItemsSource="{Binding Visits}" />
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="Исследование" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <ComboBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,2" 
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
-                      SelectedValue="{Binding SelectedAnalyseId}"
+                      SelectedValue="{Binding SelectedAnalyseId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       ItemsSource="{Binding Analyses}" />
 
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Дата/время записи" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <xctk:DateTimePicker Grid.Row="2" Grid.Column="1" Height="23" Margin="5,2"
                              HorizontalAlignment="Left"
                              Watermark="укажите дату/время записи" HorizontalContentAlignment="Left" ShowButtonSpinner="False" TimeFormat="FullDateTime"
-                             Value="{Binding AssignDateTime}"/>
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                             Value="{Binding AssignDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Grid.Row="3" Grid.Column="0" Text="Источник финанс." Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,2" 
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
-                      SelectedValue="{Binding SelectedFinSourceId}"
+                      SelectedValue="{Binding SelectedFinSourceId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       ItemsSource="{Binding FinSources}" />
 
             <TextBlock Grid.Row="4" Grid.Column="0" Text="Форма оказания" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,2" 
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
-                      SelectedValue="{Binding SelectedUrgentlyId}"
+                      SelectedValue="{Binding SelectedUrgentlyId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       ItemsSource="{Binding Urgentlies}" />
 
             <TextBlock Grid.Row="5" Grid.Column="0" Text="Место выполнения" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,2" 
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
-                      SelectedValue="{Binding SelectedExecutionPlaceId}"
+                      SelectedValue="{Binding SelectedExecutionPlaceId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       ItemsSource="{Binding ExecutionPlaces}" />
 
             <TextBlock Grid.Row="6" Grid.Column="0" Text="Примечание" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <xctk:WatermarkTextBox Grid.Row="6" Grid.Column="1"
                                Watermark="укажите доп. информацию к записи..."
-                               TextWrapping="Wrap" AcceptsReturn="True" Margin="5,2" VerticalContentAlignment="Center"/>
+                               TextWrapping="Wrap" AcceptsReturn="True" Margin="5,2" VerticalContentAlignment="Center"
+                               Text="{Binding AnalyseDetails}"/>
 
             <CheckBox Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCheckAllParameters}" FlowDirection="LeftToRight" Margin="5,2">
                 <TextBlock FlowDirection="RightToLeft" Text="(отметить все)" FontStyle="Italic" />
