--- a/PatientRecordsModule/Views/Analyses/AnalyseCreateView.xaml
+++ b/PatientRecordsModule/Views/Analyses/AnalyseCreateView.xaml
@@ -46,14 +46,14 @@
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
                       SelectedValue="{Binding SelectedAnalyseId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
                       ItemsSource="{Binding Analyses}" />
 
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Дата/время записи" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
             <xctk:DateTimePicker Grid.Row="2" Grid.Column="1" Height="23" Margin="5,2"
                              HorizontalAlignment="Left"
                              Watermark="укажите дату/время записи" HorizontalContentAlignment="Left" ShowButtonSpinner="False" TimeFormat="FullDateTime"
-                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
                              Value="{Binding AssignDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Grid.Row="3" Grid.Column="0" Text="Источник финанс." Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
@@ -61,7 +61,7 @@
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
                       SelectedValue="{Binding SelectedFinSourceId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
                       ItemsSource="{Binding FinSources}" />
 
             <TextBlock Grid.Row="4" Grid.Column="0" Text="Форма оказания" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
@@ -69,7 +69,7 @@
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
                       SelectedValue="{Binding SelectedUrgentlyId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
                       ItemsSource="{Binding Urgentlies}" />
 
             <TextBlock Grid.Row="5" Grid.Column="0" Text="Место выполнения" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
@@ -77,7 +77,7 @@
                       SelectedValuePath="Value" 
                       DisplayMemberPath="Field" 
                       SelectedValue="{Binding SelectedExecutionPlaceId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
                       ItemsSource="{Binding ExecutionPlaces}" />
 
             <TextBlock Grid.Row="6" Grid.Column="0" Text="Примечание" Margin="5,2" FontWeight="Medium" VerticalAlignment="Center" />
@@ -102,7 +102,6 @@
             </ListBox>
 
             <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.RowSpan="8" Grid.ColumnSpan="2" />
-            <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.RowSpan="8" Grid.ColumnSpan="2" />
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
