--- a/Core.Wpf/Controls/TreeViewComboBox.xaml
+++ b/Core.Wpf/Controls/TreeViewComboBox.xaml
@@ -29,7 +29,8 @@
                Placement="Bottom"
                MaxHeight="{Binding MaxDropDownHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
                x:Name="popup"
-               Closed="PopupOnClosed">
+               Closed="PopupOnClosed"
+               Opened="PopupOnOpened">
             <Border Background="White"
                     BorderBrush="Black"
                     BorderThickness="1">
