- Fixes #135 - schedule editor now uses TreeViewComboBox
- Fixes #137 - child record type can now be assigned instead of parent type

--- a/ScheduleEditorModule/Views/ScheduleEditorEditDayView.xaml
+++ b/ScheduleEditorModule/Views/ScheduleEditorEditDayView.xaml
@@ -2,14 +2,21 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                     xmlns:markupExtensions="clr-namespace:Core.Wpf.MarkupExtensions;assembly=Core.Wpf"
-                    xmlns:viewModels="clr-namespace:ScheduleEditorModule.ViewModels">
+                    xmlns:viewModels="clr-namespace:ScheduleEditorModule.ViewModels"
+                    xmlns:controls="clr-namespace:Core.Wpf.Controls;assembly=Core.Wpf"
+                    xmlns:data="clr-namespace:Core.Data;assembly=Core.Data">
     <DataTemplate DataType="{x:Type viewModels:ScheduleEditorEditDayViewModel}">
         <DataTemplate.Resources>
-            <converters:Converter x:Key="ItemCountToVisiblityConverter" 
-                                     DefaultValue="{x:Static Visibility.Collapsed}">
-                <converters:ConverterItem To="{x:Static Visibility.Visible}"
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Shared.DataTemplates;Component/Core.Data.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+                <converters:Converter x:Key="ItemCountToVisiblityConverter"
+                                  DefaultValue="{x:Static Visibility.Collapsed}">
+                    <converters:ConverterItem To="{x:Static Visibility.Visible}"
                                           From="{markupExtensions:Int32 0}" />
-            </converters:Converter>
+                </converters:Converter>
+            </ResourceDictionary>
         </DataTemplate.Resources>
         <StackPanel Orientation="Vertical"
                     Width="500">
@@ -17,12 +24,12 @@
                 <Button Command="{Binding AddRecordTypeCommand, Mode=OneTime}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="16"
-                               Height="16" 
+                               Height="16"
                                Source="pack://application:,,,/Core;Component/Resources/Images/Add48x48.png"
                                Stretch="Uniform"
-                               Margin="2" 
+                               Margin="2"
                                VerticalAlignment="Center" />
-                        <TextBlock Margin="2" 
+                        <TextBlock Margin="2"
                                    VerticalAlignment="Center"
                                    Text="Добавить услугу" />
                     </StackPanel>
@@ -30,12 +37,12 @@
                 <Button Command="{Binding ClearRecordTypesCommand, Mode=OneTime}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="16"
-                               Height="16" 
+                               Height="16"
                                Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png"
-                               Stretch="Uniform" 
+                               Stretch="Uniform"
                                Margin="2"
                                VerticalAlignment="Center" />
-                        <TextBlock Margin="2" 
+                        <TextBlock Margin="2"
                                    VerticalAlignment="Center"
                                    Text="Очистить список" />
                     </StackPanel>
@@ -44,9 +51,9 @@
             <Grid>
                 <ListBox MinHeight="150"
                          MaxHeight="300"
-                         ItemsSource="{Binding AllowedRecordTypes}" 
-                         Margin="5" 
-                         Grid.IsSharedSizeScope="True" 
+                         ItemsSource="{Binding AllowedRecordTypes}"
+                         Margin="5"
+                         Grid.IsSharedSizeScope="True"
                          HorizontalContentAlignment="Stretch"
                          HorizontalAlignment="Stretch">
                     <ListBox.ItemTemplate>
@@ -60,57 +67,58 @@
                                                       MinWidth="100" />
                                 </Grid.ColumnDefinitions>
                                 <Button Margin="2"
-                                        Padding="2" 
+                                        Padding="2"
                                         Command="{Binding DataContext.RemoveRecordTypeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, Mode=OneTime}"
                                         CommandParameter="{Binding Mode=OneTime}"
                                         Opacity="0.5"
-                                        x:Name="Button" 
+                                        x:Name="Button"
                                         ToolTip="Убрать услугу">
-                                    <Image Width="12" 
+                                    <Image Width="12"
                                            Height="12"
                                            Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png"
-                                           Stretch="Uniform" 
-                                           Margin="2" 
+                                           Stretch="Uniform"
+                                           Margin="2"
                                            VerticalAlignment="Center" />
                                 </Button>
-                                <ComboBox Grid.Row="0"
-                                          Grid.Column="1" 
-                                          IsEditable="False" 
-                                          HorizontalAlignment="Stretch"
-                                          DisplayMemberPath="Name"
-                                          SelectedValue="{Binding RecordTypeId, UpdateSourceTrigger=PropertyChanged}" 
-                                          SelectedValuePath="Id" 
-                                          Margin="2" 
-                                          ItemsSource="{Binding DataContext.AssignableRecordTypes, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}"
-                                          MinWidth="250"/>
-                                <TextBox Grid.Row="0" 
+                                <controls:TreeViewComboBox Grid.Row="0"
+                                                           Grid.Column="1"
+                                                           HorizontalAlignment="Stretch"
+                                                           DisplayMemberPath="Name"
+                                                           SelectedItem="{Binding RecordType, UpdateSourceTrigger=PropertyChanged}"
+                                                           Margin="2"
+                                                           ItemsSource="{Binding DataContext.AssignableRecordTypes, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}"
+                                                           MinWidth="250"
+                                                           ItemTemplate="{StaticResource NonAssignableTypesGrayedOut}"
+                                                           SelectionPredicate="{x:Static data:RecordType.AssignableRecordTypeSelectorPredicate}"
+                                                           FilterPredicate="{x:Static data:RecordType.AssignableRecordTypeFilterPredicate}" />
+                                <TextBox Grid.Row="0"
                                          Grid.Column="2"
                                          Text="{Binding Times, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                          Margin="2 2 20 2"
-                                     Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" MinWidth="150" />
+                                         Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" MinWidth="150" />
                             </Grid>
                             <DataTemplate.Triggers>
-                                <Trigger SourceName="Grid" 
-                                         Property="IsMouseOver" 
+                                <Trigger SourceName="Grid"
+                                         Property="IsMouseOver"
                                          Value="True">
                                     <Setter TargetName="Button"
-                                            Property="Opacity" 
+                                            Property="Opacity"
                                             Value="1.0" />
                                 </Trigger>
                             </DataTemplate.Triggers>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-                <TextBlock Text="Кабинет закрыт" 
+                <TextBlock Text="Кабинет закрыт"
                            Foreground="DimGray"
                            FontWeight="SemiBold"
-                           FontSize="16" 
+                           FontSize="16"
                            HorizontalAlignment="Center"
-                           VerticalAlignment="Center" 
+                           VerticalAlignment="Center"
                            IsHitTestVisible="False"
                            Visibility="{Binding AllowedRecordTypes.Count, Converter={StaticResource ItemCountToVisiblityConverter}}" />
             </Grid>
-            <CheckBox Margin="5 0 5 5" 
+            <CheckBox Margin="5 0 5 5"
                       IsChecked="{Binding IsThisDayOnly, UpdateSourceTrigger=PropertyChanged}">
                 <TextBlock>
                     <Run Text="Указанное расписание будет действовать только " />
