Closes #116 - now enter key works same as tab key for all textboxes and comboboxes

--- a/PatientInfoModule/Views/Info/DisabilityDocumentView.xaml
+++ b/PatientInfoModule/Views/Info/DisabilityDocumentView.xaml
@@ -55,7 +55,8 @@
                 HorizontalAlignment="Right"
                 ToolTip="Удалить документ"
                 Template="{StaticResource CloseButtonTemplate}"
-                Command="{Binding DeleteCommand, Mode=OneTime}"/>
+                Command="{Binding DeleteCommand, Mode=OneTime}"
+                IsTabStop="False"/>
         <TextBlock Grid.Row="1"
                    Grid.Column="0"
                    Text="Тип документа" />
