--- a/PatientInfoModule/Views/Info/PatientInfoView.xaml
+++ b/PatientInfoModule/Views/Info/PatientInfoView.xaml
@@ -89,7 +89,8 @@
                          HorizontalAlignment="Stretch"
                          Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                          Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
-                         MaxLength="100" />
+                         MaxLength="100"
+                         behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <StackPanel Grid.Row="0"
                             Grid.Column="3"
                             Grid.RowSpan="4"
@@ -133,19 +134,22 @@
                                  Margin="5 5 25 5"
                                  IsChecked="{Binding IsIncorrectName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                                 IsTabStop="{Binding IsNameChanged}" />
+                                 IsTabStop="{Binding IsNameChanged}" 
+                                 behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                     <RadioButton Content="Иная причина"
                                  Margin="5 5 25 5"
                                  IsChecked="{Binding IsNewName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                                 IsTabStop="{Binding IsNameChanged}" />
+                                 IsTabStop="{Binding IsNameChanged}" 
+                                 behaviors:FocusAdvancement.AdvancesByEnterKey="True" />
                     <TextBlock Text="Новые данные вступают в силу с"
                                Visibility="{Binding IsNewName, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}" />
                     <DatePicker HorizontalAlignment="Left"
                                 SelectedDate="{Binding NewNameStartDate, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                 Visibility="{Binding IsNewName, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
                                 Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                                IsTabStop="{Binding IsNameChanged}" />
+                                IsTabStop="{Binding IsNameChanged}"
+                                behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 </StackPanel>
                 <TextBlock Grid.Row="1"
                            Grid.Column="1"
@@ -155,7 +159,8 @@
                          HorizontalAlignment="Stretch"
                          MaxLength="100"
                          Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                         Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" />
+                         Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
+                         behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <TextBlock Grid.Row="2"
                            Grid.Column="1"
                            Text="Отчество" />
@@ -163,7 +168,8 @@
                          Grid.Column="2"
                          HorizontalAlignment="Stretch"
                          MaxLength="100"
-                         Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}" />
+                         Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}" 
+                         behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <TextBlock Grid.Row="3"
                            Grid.Column="1"
                            Text="Дата рождения" />
@@ -171,14 +177,15 @@
                             Grid.Column="2"
                             Grid.ColumnSpan="2"
                             Orientation="Horizontal">
-                    <DatePicker
-                        SelectedDate="{Binding BirthDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                        Margin="3 3 22 3"
-                        Validation.ErrorTemplate="{StaticResource ValidationTemplate}" />
+                    <DatePicker SelectedDate="{Binding BirthDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                Margin="3 3 22 3"
+                                Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
+                                behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                     <TextBlock Text="Пол" />
                     <ToggleButton Background="Transparent"
                                   IsChecked="{Binding IsMale}"
-                                  Width="90">
+                                  Width="90"
+                                  behaviors:FocusAdvancement.AdvancesByEnterKey="True">
                         <StackPanel Orientation="Horizontal"
                                     VerticalAlignment="Stretch">
                             <TextBlock
@@ -194,17 +201,18 @@
                     <TextBox Text="{Binding Snils, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              Width="140"
                              MaxLength="14"
-                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                             behaviors:FocusAdvancement.AdvancesByEnterKey="True">
                         <i:Interaction.Behaviors>
                             <behaviors:SnilsInputHelperBehavior />
                         </i:Interaction.Behaviors>
                     </TextBox>
                     <TextBlock Text="ЕНП" />
-                    <TextBox
-                        Text="{Binding MedNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                        Width="140"
-                        MaxLength="16"
-                        Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+                    <TextBox Text="{Binding MedNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                             Width="140"
+                             MaxLength="16"
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                             behaviors:FocusAdvancement.AdvancesByEnterKey="True">
                         <i:Interaction.Behaviors>
                             <behaviors:MedNumberInputHelperBehavior />
                         </i:Interaction.Behaviors>
@@ -217,9 +225,11 @@
                                   SelectedItem="{Binding SelectedRelationship, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                   Width="100"
                                   Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                                  Margin="3 3 23 3" />
+                                  Margin="3 3 23 3"
+                                  behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                         <CheckBox Content="Является официальным представителем пациента"
-                                  IsChecked="{Binding IsRepresentative, UpdateSourceTrigger=PropertyChanged}" />
+                                  IsChecked="{Binding IsRepresentative, UpdateSourceTrigger=PropertyChanged}" 
+                                  behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                     </StackPanel>
                 </StackPanel>
                 <TextBlock Grid.Row="4"
@@ -237,12 +247,14 @@
                     </Grid.ColumnDefinitions>
                     <TextBox Grid.Column="0"
                              HorizontalAlignment="Stretch"
-                             Text="{Binding Phones, UpdateSourceTrigger=PropertyChanged}" />
+                             Text="{Binding Phones, UpdateSourceTrigger=PropertyChanged}"
+                             behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                     <TextBlock Grid.Column="1"
                                Text="Эл. почта" />
                     <TextBox Grid.Column="2"
                              HorizontalAlignment="Stretch"
-                             Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
+                             Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" 
+                             behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 </Grid>
             </Grid>
             <Grid DockPanel.Dock="Top"
@@ -264,19 +276,23 @@
                           Margin="3 3 22 3"
                           SelectedValue="{Binding NationalityId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                           Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                          HorizontalAlignment="Stretch" />
+                          HorizontalAlignment="Stretch" 
+                          behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <TextBlock Grid.Column="2"
                            Text="Образование" />
                 <ComboBox Grid.Column="3"
                           ItemsSource="{Binding Educations}"
                           SelectedValue="{Binding EducationId, UpdateSourceTrigger=PropertyChanged}"
-                          HorizontalAlignment="Stretch" />
+                          HorizontalAlignment="Stretch" 
+                          behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <TextBlock Grid.Column="4"
-                           Text="Семейное положение" />
+                           Text="Семейное положение" 
+                           behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <ComboBox Grid.Column="5"
                           ItemsSource="{Binding MaritalStatuses}"
                           SelectedValue="{Binding MaritalStatusId, UpdateSourceTrigger=PropertyChanged}"
-                          HorizontalAlignment="Stretch" />
+                          HorizontalAlignment="Stretch"
+                          behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
                 <TextBlock Grid.Column="6"
                            Text="Группа здоровья"
                            Visibility="{Binding IsChild, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}" />
@@ -286,7 +302,8 @@
                           HorizontalAlignment="Stretch"
                           Margin="3 3 22 3"
                           Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                          Visibility="{Binding IsChild, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}" />
+                          Visibility="{Binding IsChild, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}" 
+                          behaviors:FocusAdvancement.AdvancesByEnterKey="True"/>
             </Grid>
             <Grid HorizontalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
