--- a/PatientInfoModule/Views/Info/SocialStatusView.xaml
+++ b/PatientInfoModule/Views/Info/SocialStatusView.xaml
@@ -54,7 +54,8 @@
                 HorizontalAlignment="Right"
                 ToolTip="Удалить статус"
                 Template="{StaticResource CloseButtonTemplate}"
-                Command="{Binding DeleteCommand, Mode=OneTime}"/>
+                Command="{Binding DeleteCommand, Mode=OneTime}"
+                IsTabStop="False"/>
         <TextBlock Grid.Row="1"
                    Grid.Column="0"
                    Text="Тип" />
