--- a/Shell/App.xaml
+++ b/Shell/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Shell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:fluent="urn:fluent-ribbon">
+             xmlns:fluent="urn:fluent-ribbon"
+             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -31,6 +32,8 @@
                         Value="23" />
                 <Setter Property="VerticalContentAlignment"
                         Value="Center" />
+                <Setter Property="behaviors:FocusAdvancement.AdvancesByEnterKey"
+                        Value="True" />
             </Style>
             <Style TargetType="{x:Type DatePicker}">
                 <Setter Property="VerticalAlignment"
@@ -47,6 +50,8 @@
                         Value="0" />
                 <Setter Property="Margin"
                         Value="3" />
+                <Setter Property="behaviors:FocusAdvancement.AdvancesByEnterKey"
+                        Value="True" />
             </Style>
             <Style TargetType="{x:Type ComboBox}">
                 <Setter Property="Margin"
@@ -57,6 +62,8 @@
                         Value="Name" />
                 <Setter Property="SelectedValuePath"
                         Value="Id" />
+                <Setter Property="behaviors:FocusAdvancement.AdvancesByEnterKey"
+                        Value="True" />
             </Style>
             <Style TargetType="{x:Type RadioButton}">
                 <Setter Property="Margin"
@@ -65,6 +72,8 @@
                         Value="Center" />
                 <Setter Property="VerticalContentAlignment"
                         Value="Center" />
+                <Setter Property="behaviors:FocusAdvancement.AdvancesByEnterKey"
+                        Value="True" />
             </Style>
             <Style TargetType="{x:Type ToggleButton}">
                 <Setter Property="Margin"
